change made on 28/03

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "json-server": "json-server --watch src/productData.json --port 3001",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
